# Software_2025

./: .gitignore  .gitmodules  README.md  compose.yaml  dev_compose.yaml  eer_install.sh  package-lock.json
CLIApp/: CLI Readme.md  main  main.cpp
CLIApp/archive/: main.cpp
CLIApp/src/: EER  Makefile  gui.cpp  imgui.ini  main.cpp
CppGUI/: EER.pro  mainwindow.cpp  mainwindow.h
CppGUI/EER/: EER.pro  Resources.qrc  mainwindow.cpp  mainwindow.ui  resources.qrc
ROS2/: DevDockerfile  Dockerfile
ROS2/ROS_workspace/: dev_docker_entry_script.sh  docker_entry_script.sh  imgui.ini
ROS2/ROS_workspace/cli_app/: package.xml
ROS2/ROS_workspace/cli_app/eer_messages/msg/: ADCData.msg
ROS2/ROS_workspace/cli_app/src/: cli.cpp  controller.cpp  gui.cpp  main.cpp
ROS2/ROS_workspace/src/beaumont_pkg/beaumont_pkg/: autonomus_brain_coral_transplant.py  i2c_master.py  profiles_manager.py  simulation_bot_control.py
ROS2/ROS_workspace/src/beaumont_pkg/launch/: simulation_beaumont_startup.xml
ROS2/ROS_workspace/src/cli_app/: CMakeLists.txt
ROS2/ROS_workspace/src/cli_app/imgui/backends/: controller.h  gui.h
ROS2/ROS_workspace/src/cli_app/include/: cli.h  gui.h
ROS2/ROS_workspace/src/cli_app/src/: cli.cpp  controller.cpp  gui.cpp  main.cpp
ROS2/ROS_workspace/src/eer_messages/: CMakeLists.txt
ROS2/ROS_workspace/src/eer_messages/msg/: IMUData.msg  PilotInput.msg  TempSensorData.msg
ROS2/ROS_workspace/src/waterwitch_pkg/: CMakeLists.txt  package.xml
ROS2/ROS_workspace/src/waterwitch_pkg/include/: waterwitch_constants.h
ROS2/ROS_workspace/src/waterwitch_pkg/launch/: simulation_waterwitch_startup.xml
ROS2/ROS_workspace/src/waterwitch_pkg/src/: pilot_listener.cpp  simulation_bot_control.cpp  waterwitch_constants.cpp
ROS2/Simulation/: CMakeLists.txt  OceanWorld.sdf
ROS2/Simulation/models/Beaumont/: model.sdf
ROS2/Simulation/src/: Buoyancy.cc  Buoyancy.hh
Simulation/: CMakeLists.txt  OceanWorld.sdf
Simulation/models/Beaumont/: chassis_assembly.stl  model.sdf
WaterwitchGUI/: CMakeLists.txt
WaterwitchGUI/src/: Config.hpp  Power.hpp  image.cpp  main.cpp
WebGUI/src/api/: ROS.tsx
camjs/: main.js
carp_gui_video_generator/: carp_gui_video_generator.py  install.sh  invasive_carp_video_generator.py  requirements.txt  run.sh
ros_workspace/: Dockerfile  README.md  docker_entry_script.sh
ros_workspace/configs/: asd.json  test.json
ros_workspace/src/beaumont_backend/: CMakeLists.txt  package.xml
ros_workspace/src/beaumont_backend/beaumont_backend/: autonomus_brain_coral_transplant.py  i2c_master.cpp  i2c_master.py  simulation_bot_control.py
ros_workspace/src/beaumont_backend/launch/: beaumont_startup.xml  simulation_beaumont_startup.xml
ros_workspace/src/common_backend/: CMakeLists.txt  package.xml  setup.cfg
ros_workspace/src/common_backend/common_backend/: profiles_manager.py
ros_workspace/src/common_backend/src/: ConfigManager.cpp
ros_workspace/src/cpp_frontend/: CMakeLists.txt  package.xml
ros_workspace/src/cpp_frontend/include/: gui.h
ros_workspace/src/cpp_frontend/src/: cli.cpp  gui.cpp  main.cpp
ros_workspace/src/eer_interfaces/: CMakeLists.txt  package.xml
ros_workspace/src/eer_interfaces/msg/: PilotInput.msg  WaterwitchControl.msg
ros_workspace/src/eer_interfaces/srv/: ServoIps.srv
ros_workspace/src/waterwitch_backend/: CMakeLists.txt  package.xml
ros_workspace/src/waterwitch_backend/include/: waterwitch_constants.h
ros_workspace/src/waterwitch_backend/launch/: simulation_waterwitch_startup.xml  waterwitch_startup.xml
ros_workspace/src/waterwitch_backend/src/: i2c_master.cpp  pilot_listener.cpp  simulation_bot_control.cpp  waterwitch_constants.cpp
ros_workspace/src/waterwitch_frontend/: CMakeLists.txt
ros_workspace/src/waterwitch_frontend/include/waterwitch_frontend/: Camera.hpp  Config.hpp  Power.hpp  ROS.hpp
ros_workspace/src/waterwitch_frontend/src/: main.cpp
science_officer_frontend/: index.html  package-lock.json  package.json
science_officer_frontend/src/: App.tsx  CameraTab.tsx  ScienceTab.tsx  main.tsx
web_backend/: backend.py
web_frontend/: README.md  package-lock.json  package.json
web_frontend/src/: index.tsx
web_frontend/src/api/: Atoms.tsx  ROS.tsx
web_frontend/src/components/: App.tsx  BotTab.tsx  CameraTab.tsx  CarpAnimation.tsx  CarpTab.tsx
web_frontend/src/mate_2024_science_tasks/pages/: Mate2024ScienceController.tsx  Mate2024TabletApp.tsx
web_frontend/web_backend/: backend.py  requirements.txt
