<?xml version="1.0"?>
<package format="3">
  <name>cpp_frontend</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="allanbudgell2001@gmail.com">allan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>opencv</depend>
  <depend>glfw3</depend>
  <depend>eer_interfaces</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>